fix: 更新用户档案页面的默认信息

--- a/profile.html
+++ b/profile.html
@@ -236,7 +236,7 @@
                   type="text"
                   class="form-control"
                   id="student-id"
-                  value="2025001"
+                  value="22778899"
                   disabled
                 />
               </div>
@@ -247,7 +247,7 @@
                   type="email"
                   class="form-control"
                   id="email"
-                  value="zhangsan@example.com"
+                  value="zhangsan@mail2.sysu.edu.cn"
                   disabled
                 />
               </div>
@@ -269,7 +269,7 @@
                   type="text"
                   class="form-control"
                   id="major"
-                  value="计算机科学与技术"
+                  value="智能工程与技术"
                   disabled
                 />
               </div>
@@ -280,7 +280,7 @@
                   type="text"
                   class="form-control"
                   id="class"
-                  value="2025级1班"
+                  value="2022级5班"
                   disabled
                 />
               </div>
@@ -321,7 +321,7 @@
                   type="text"
                   class="form-control"
                   id="school"
-                  value="示例大学"
+                  value="羽丘高等学园"
                   disabled
                 />
               </div>
@@ -332,7 +332,7 @@
                   type="text"
                   class="form-control"
                   id="degree"
-                  value="本科"
+                  value="高中"
                   disabled
                 />
               </div>
@@ -343,7 +343,7 @@
                   type="text"
                   class="form-control"
                   id="enrollment-year"
-                  value="2025"
+                  value="2019"
                   disabled
                 />
               </div>
@@ -354,7 +354,7 @@
                   type="text"
                   class="form-control"
                   id="graduation-year"
-                  value="2029"
+                  value="2022"
                   disabled
                 />
               </div>
