--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -28,28 +28,25 @@
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-home-line"></i></div>
     <div class="sidebar-text">首页</div>
-    <div class="sidebar-icon-right"><i class="ri-dashboard-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-layout-2-line"></i></div>
   </div>
-
   <div class="sidebar-item" data-href="schedule.html">
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-calendar-line"></i></div>
     <div class="sidebar-text">课表</div>
-    <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-calendar-2-line"></i></div>
   </div>
-
   <div class="sidebar-item" data-href="grades.html">
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-bar-chart-line"></i></div>
     <div class="sidebar-text">成绩管理</div>
-    <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-pie-chart-line"></i></div>
   </div>
-
   <div class="sidebar-item" data-href="countdown.html">
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-time-line"></i></div>
     <div class="sidebar-text">考试倒计时</div>
-    <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-alarm-line"></i></div>
   </div>
 </div>
 
@@ -65,13 +62,12 @@
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-user-line"></i></div>
     <div class="sidebar-text">个人资料</div>
-    <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-user-settings-line"></i></div>
   </div>
-
   <div class="sidebar-item" data-href="settings.html">
     <div class="sidebar-light"></div>
     <div class="sidebar-icon-left"><i class="ri-settings-3-line"></i></div>
     <div class="sidebar-text">设置</div>
-    <div class="sidebar-icon-right"><i class="ri-settings-3-line"></i></div>
+    <div class="sidebar-icon-right"><i class="ri-equalizer-line"></i></div>
   </div>
 </div>
