feat: 在侧边栏、页脚和首页添加“课评速记”功能
在侧边栏、页脚和首页中添加了“课评速记”功能的链接和介绍，方便用户快速访问和记录课程评价

--- a/index.html
+++ b/index.html
@@ -330,9 +330,7 @@
               <a href="profile.html" class="feature-link">
                 编辑个人资料 <i class="fas fa-arrow-right"></i>
               </a>
-            </div>
-
-            <!-- 设置特性 -->
+            </div>            <!-- 设置特性 -->
             <div class="feature-card animate-on-scroll fade-up delay-100">
               <div class="feature-icon">
                 <i class="fas fa-cog"></i>
@@ -343,6 +341,20 @@
               </p>
               <a href="settings.html" class="feature-link">
                 调整设置 <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+
+            <!-- 课评速记特性 -->
+            <div class="feature-card animate-on-scroll fade-up delay-200">
+              <div class="feature-icon">
+                <i class="fas fa-comment-dots"></i>
+              </div>
+              <h3 class="feature-title">课评速记</h3>
+              <p class="feature-text">
+                用简短评价和表情记录你对课程的感受，轻松分享你的课堂体验和反馈。
+              </p>
+              <a href="lesson.html" class="feature-link">
+                记录课程评价 <i class="fas fa-arrow-right"></i>
               </a>
             </div>
           </div>
