--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -48,6 +48,12 @@
     <div class="sidebar-text">考试倒计时</div>
     <div class="sidebar-icon-right"><i class="ri-alarm-line"></i></div>
   </div>
+  <div class="sidebar-item" data-href="lesson.html">
+    <div class="sidebar-light"></div>
+    <div class="sidebar-icon-left"><i class="ri-chat-smile-3-line"></i></div>
+    <div class="sidebar-text">课评速记</div>
+    <div class="sidebar-icon-right"><i class="ri-emotion-line"></i></div>
+  </div>
 </div>
 
 <div class="sidebar-line"></div>
