--- a/pages/footer.html
+++ b/pages/footer.html
@@ -4,13 +4,13 @@
     <h3 class="footer-title">课堂助手</h3>
     <p>你的学习管理伙伴，让学习更加高效有序。</p>
   </div>
-  <div class="footer-column">
-    <h3 class="footer-title">快速链接</h3>
+  <div class="footer-column">    <h3 class="footer-title">快速链接</h3>
     <ul class="footer-links">
       <li><a href="index.html">首页</a></li>
       <li><a href="schedule.html">课表</a></li>
       <li><a href="grades.html">成绩管理</a></li>
       <li><a href="countdown.html">考试倒计时</a></li>
+      <li><a href="lesson.html">课评速记</a></li>
       <li><a href="profile.html">个人资料</a></li>
       <li><a href="settings.html">设置</a></li>
     </ul>
