feat: 新增课程数据文件并优化HTML格式
新增 `schedule_data.js` 和 `schedule.json` 文件，包含课程、时间段和日期的详细数据。同时优化了 `footer.html` 和 `index.html` 的格式，提升代码可读性。

--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
               <a href="profile.html" class="feature-link">
                 编辑个人资料 <i class="fas fa-arrow-right"></i>
               </a>
-            </div>            <!-- 设置特性 -->
+            </div>
+            <!-- 设置特性 -->
             <div class="feature-card animate-on-scroll fade-up delay-100">
               <div class="feature-icon">
                 <i class="fas fa-cog"></i>
