--- a/pages/footer.html
+++ b/pages/footer.html
@@ -4,7 +4,8 @@
     <h3 class="footer-title">课堂助手</h3>
     <p>你的学习管理伙伴，让学习更加高效有序。</p>
   </div>
-  <div class="footer-column">    <h3 class="footer-title">快速链接</h3>
+  <div class="footer-column">
+    <h3 class="footer-title">快速链接</h3>
     <ul class="footer-links">
       <li><a href="index.html">首页</a></li>
       <li><a href="schedule.html">课表</a></li>
