refactor: 将页面样式从HTML文件迁移到独立的CSS文件
将各个页面的内联样式迁移到独立的CSS文件中，以提高代码的可维护性和复用性。每个页面的样式现在位于`css/pages/`目录下对应的CSS文件中。

--- a/schedule.html
+++ b/schedule.html
@@ -22,354 +22,8 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <style>
-      /* 课表页面特定样式 */
-      .page-header {
-        padding: 2rem 0;
-        background-color: var(--background-color);
-        border-radius: var(--border-radius);
-        margin-bottom: 2rem;
-        box-shadow: var(--shadow);
-      }
-
-      .schedule-container {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-      }
-
-      .schedule-controls {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 1rem;
-      }
-
-      .schedule-actions {
-        display: flex;
-        gap: 0.5rem;
-      }
-
-      /* 课表网格 */
-      .timetable {
-        background: var(--background-color);
-        border-radius: var(--border-radius);
-        box-shadow: var(--shadow);
-        overflow-x: auto;
-        width: 100%;
-      }
-
-      .timetable-grid {
-        display: grid;
-        grid-template-columns: 80px repeat(7, 1fr);
-        min-width: 800px;
-      }
-
-      .timetable-header {
-        background-color: var(--primary-light);
-        font-weight: 600;
-        text-align: center;
-        padding: 1rem 0.5rem;
-        border-bottom: 1px solid var(--border-color);
-      }
-
-      .timetable-time {
-        grid-column: 1;
-        padding: 1rem 0.5rem;
-        text-align: center;
-        border-right: 1px solid var(--border-color);
-        border-bottom: 1px solid var(--border-color);
-        font-weight: 500;
-        background-color: var(--background-secondary);
-      }
-
-      .timetable-cell {
-        border-right: 1px solid var(--border-color);
-        border-bottom: 1px solid var(--border-color);
-        padding: 0.5rem;
-        min-height: 80px;
-        position: relative;
-      }
-
-      .timetable-cell:last-child {
-        border-right: none;
-      }
-
-      /* 课程卡片样式 */
-      .course-card {
-        background-color: var(--primary-light);
-        color: var(--primary-dark);
-        border-radius: var(--border-radius-sm);
-        padding: 0.5rem;
-        font-size: 0.9rem;
-        height: 100%;
-        cursor: pointer;
-        transition: transform 0.2s, box-shadow 0.2s;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .course-card:hover {
-        transform: translateY(-2px);
-        box-shadow: var(--shadow);
-      }
-
-      .course-title {
-        font-weight: 600;
-        font-size: 0.95rem;
-        margin-bottom: 0.25rem;
-      }
-
-      .course-info {
-        color: var(--text-secondary);
-        font-size: 0.8rem;
-      }
-
-      .course-location {
-        display: flex;
-        align-items: center;
-        gap: 0.25rem;
-        margin-top: 0.25rem;
-        font-size: 0.8rem;
-      }
-
-      /* 课程颜色变量 */
-      .course-math {
-        background-color: #e1f1ff;
-        color: #0368b2;
-      }
-
-      .course-physics {
-        background-color: #feedc9;
-        color: #c25e00;
-      }
-
-      .course-chemistry {
-        background-color: #d7f8e8;
-        color: #00714b;
-      }
-
-      .course-biology {
-        background-color: #ffe2ec;
-        color: #b30047;
-      }
-
-      .course-literature {
-        background-color: #e6e6ff;
-        color: #3333cc;
-      }
-
-      .course-history {
-        background-color: #f2e8ff;
-        color: #6200ea;
-      }
-
-      .course-english {
-        background-color: #e0f7fa;
-        color: #006064;
-      }
-
-      /* 新增课程颜色 */
-      .course-computer {
-        background-color: #e6f7ff;
-        color: #0050b3;
-      }
-
-      .course-art {
-        background-color: #fff1f0;
-        color: #cf1322;
-      }
-
-      .course-music {
-        background-color: #f9f0ff;
-        color: #722ed1;
-      }
-
-      .course-sports {
-        background-color: #f0f5ff;
-        color: #096dd9;
-      }
-
-      .course-politics {
-        background-color: #fff0f6;
-        color: #c41d7f;
-      }
-
-      .course-geography {
-        background-color: #f4ffb8;
-        color: #5b8c00;
-      }
-
-      /* 添加课程弹窗 */
-      .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1000;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .modal-content {
-        background-color: var(--background-color);
-        border-radius: var(--border-radius);
-        padding: 2rem;
-        width: 90%;
-        max-width: 500px;
-        position: relative;
-        box-shadow: var(--shadow-lg);
-      }
-
-      .modal-close {
-        position: absolute;
-        right: 1.5rem;
-        top: 1rem;
-        font-size: 1.5rem;
-        cursor: pointer;
-        color: var(--text-secondary);
-        transition: color 0.2s;
-      }
-
-      .modal-close:hover {
-        color: var(--danger-color);
-      }
-
-      .form-row {
-        display: flex;
-        gap: 1rem;
-        margin-bottom: 1rem;
-      }
-
-      .form-group.col-6 {
-        flex: 0 0 calc(50% - 0.5rem);
-      }
-
-      .color-options {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.5rem;
-        margin-top: 0.5rem;
-      }
-
-      .color-option {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        cursor: pointer;
-        transition: transform 0.2s;
-      }
-
-      .color-option:hover,
-      .color-option.selected {
-        transform: scale(1.1);
-        box-shadow: 0 0 0 2px var(--primary-color);
-      }
-
-      .empty-state {
-        text-align: center;
-        padding: 3rem 1rem;
-        color: var(--text-secondary);
-      }
-
-      .empty-state-icon {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        color: var(--border-color);
-      }
-
-      .empty-state-text {
-        margin-bottom: 1.5rem;
-      }
-
-      /* 导入导出按钮 */
-      .import-export {
-        display: flex;
-        gap: 0.5rem;
-        align-items: center;
-      }
-
-      .export-dropdown {
-        position: relative;
-        display: inline-block;
-      }
-
-      .export-dropdown-content {
-        display: none;
-        position: absolute;
-        right: 0;
-        background-color: var(--background-color);
-        min-width: 160px;
-        box-shadow: var(--shadow-md);
-        z-index: 1;
-        border-radius: var(--border-radius-sm);
-        overflow: hidden;
-      }
-
-      .export-dropdown-content a {
-        color: var(--text-color);
-        padding: 0.75rem 1rem;
-        text-decoration: none;
-        display: block;
-        transition: background-color 0.2s;
-      }
-
-      .export-dropdown-content a:hover {
-        background-color: var(--background-secondary);
-      }
-
-      .export-dropdown:hover .export-dropdown-content {
-        display: block;
-      }
-
-      /* 切换视图按钮 */
-      .view-toggle {
-        display: flex;
-        background-color: var(--background-secondary);
-        border-radius: var(--border-radius);
-        overflow: hidden;
-      }
-
-      .view-toggle button {
-        border: none;
-        background: none;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        font-weight: 500;
-        color: var(--text-secondary);
-        transition: background-color 0.3s, color 0.3s;
-      }
-
-      .view-toggle button.active {
-        background-color: var(--primary-color);
-        color: white;
-      }
-
-      /* 响应式调整 */
-      @media (max-width: 768px) {
-        .schedule-controls {
-          flex-direction: column;
-          align-items: stretch;
-        }
-
-        .timetable-grid {
-          grid-template-columns: 60px repeat(7, 1fr);
-        }
-
-        .form-row {
-          flex-direction: column;
-          gap: 0rem;
-        }
-
-        .form-group.col-6 {
-          flex: 0 0 100%;
-        }
-      }
-    </style>
+    <!-- 添加页面特定样式 -->
+    <link rel="stylesheet" href="css/pages/schedule.css" />
   </head>
   <body>
     <!-- 侧边栏导航 - 只保留容器元素 -->
