--- a/schedule.html
+++ b/schedule.html
@@ -444,43 +444,39 @@
           adjustFontSize(card);
 
           return card;
-        }
-        // 根据内容自动调整字体大小的函数
+        }        // 根据内容自动调整字体大小的函数
         function adjustFontSize(card) {
           const titleElement = card.querySelector(".course-title");
           const infoElements = card.querySelectorAll(".course-info");
           const locationElement = card.querySelector(".course-location");
 
           // 设置最小字体大小和基准字体大小
-          const minFontSize = 0.7; // rem - 提高最小字体大小以确保可读性
+          const minFontSize = 0.65; // rem - 允许较小的字体以确保完整显示
           const baseTitleSize = 0.95; // rem
           const baseInfoSize = 0.8; // rem
 
           try {
-            // 调整标题字体大小 - 只对特别长的标题进行缩放
-            if (titleElement && titleElement.textContent.length > 12) {
-              const scaleFactor = Math.min(
-                1,
-                12 / titleElement.textContent.length
-              );
-              const newSize = Math.max(
-                minFontSize,
-                baseTitleSize * scaleFactor
-              );
+            // 调整标题字体大小 - 确保始终缩放过长标题以全部显示（关键修复）
+            if (titleElement) {
+              // 对所有课程名称应用自适应字体大小，不设置长度阈值
+              const titleLength = titleElement.textContent.length;
+              
+              // 基于字符数量动态计算字体大小
+              let scaleFactor = 1;
+              if (titleLength > 6) {
+                // 字符越多，缩放比例越大
+                scaleFactor = Math.min(1, 6 / titleLength + 0.2);
+              }
+              
+              const newSize = Math.max(minFontSize, baseTitleSize * scaleFactor);
               titleElement.style.fontSize = `${newSize}rem`;
             }
 
             // 调整其他信息字体大小 - 只对特别长的内容进行缩放
             infoElements.forEach((element) => {
               if (element && element.textContent.length > 18) {
-                const scaleFactor = Math.min(
-                  1,
-                  18 / element.textContent.length
-                );
-                const newSize = Math.max(
-                  minFontSize,
-                  baseInfoSize * scaleFactor
-                );
+                const scaleFactor = Math.min(1, 18 / element.textContent.length);
+                const newSize = Math.max(minFontSize, baseInfoSize * scaleFactor);
                 element.style.fontSize = `${newSize}rem`;
               }
             });
