--- a/schedule.html
+++ b/schedule.html
@@ -424,6 +424,7 @@
             renderTimetable();
             renderListView();
             setupCourseCardEvents();
+            setupCellClickEvents();
             console.log("课表数据初始化成功");
           } catch (error) {
             console.error("初始化课表数据失败:", error);
@@ -481,7 +482,7 @@
                 coursesInCell.forEach((course) => {
                   // 只在连续课程的第一个时间段显示课程卡片
                   if (period.id === course.startTime) {
-                    cell.appendChild(createCourseCard(course));
+                    cell.appendChild(createCourseCard(course, false, false));
                   }
                 });
               }
@@ -513,10 +514,17 @@
 
           return headerFragment;
         } // 创建课程卡片
-        function createCourseCard(course) {
+        function createCourseCard(course, isNew = false, isUpdated = false) {
           const card = document.createElement("div");
           card.className = `course-card ${course.color}`;
           card.setAttribute("data-course-id", course.id);
+
+          // 添加动画类
+          if (isNew) {
+            card.classList.add("added");
+          } else if (isUpdated) {
+            card.classList.add("updated");
+          }
 
           // 添加删除图标（初始隐藏）
           const deleteIcon = document.createElement("div");
@@ -848,6 +856,232 @@
             const courseId = courseCard.getAttribute("data-course-id");
             showDeleteConfirm(courseId);
           }
+        });
+
+        // 新增：设置单元格点击事件
+        function setupCellClickEvents() {
+          document.addEventListener("click", function (e) {
+            // 检查是否处于编辑模式
+            if (!isEditMode) return;
+
+            const cell = e.target.closest(".timetable-cell");
+            if (!cell) return;
+
+            try {
+              const day = parseInt(cell.getAttribute("data-day"));
+              const time = parseInt(cell.getAttribute("data-time"));
+
+              // 验证获取的day和time是否有效
+              if (isNaN(day)) throw new Error("无效的星期数据");
+              if (isNaN(time)) throw new Error("无效的时间数据");
+
+              // 检查单元格内是否有课程
+              const hasCourse = cell.querySelector(".course-card") !== null;
+
+              if (hasCourse) {
+                // 编辑现有课程
+                const courseCard = cell.querySelector(".course-card");
+                const courseId = courseCard.getAttribute("data-course-id");
+                if (!courseId) throw new Error("课程ID无效");
+
+                const course = scheduleData.courses.find(
+                  (c) => c.id == courseId
+                );
+                if (!course) throw new Error("找不到对应课程");
+
+                editCourse(course);
+              } else {
+                // 创建新课程
+                createNewCourse(day, time);
+              }
+            } catch (error) {
+              console.error("处理单元格点击时出错:", error);
+              showNotification("操作失败: " + error.message, "error");
+            }
+          });
+        }
+
+        // 修改editCourse函数，添加边缘情况处理
+        function editCourse(course) {
+          try {
+            if (!course) throw new Error("课程数据无效");
+
+            // 获取对应的时间段文本
+            const timePeriod = scheduleData.timePeriods.find(
+              (t) => t.id === course.startTime
+            );
+            const timeText = timePeriod
+              ? timePeriod.time
+              : `第${course.startTime}节`;
+
+            // 填充模态框中的课程数据
+            document.getElementById("course-name").value = course.title || "";
+            document.getElementById("course-teacher").value =
+              course.teacher || "";
+            document.getElementById("course-location").value =
+              course.location || "";
+            document.getElementById("course-day").value = course.day || "";
+            document.getElementById("course-time").value =
+              course.startTime || "";
+            document.getElementById("course-weeks").value = course.weeks || "";
+            document.getElementById("course-notes").value = course.notes || "";
+
+            // 设置课程颜色
+            document
+              .querySelector(".color-option.selected")
+              ?.classList.remove("selected");
+            const colorOption = document.querySelector(
+              `.color-option[data-class="${course.color}"]`
+            );
+            if (colorOption) {
+              colorOption.classList.add("selected");
+              document.getElementById("course-color").value = course.color;
+            } else {
+              // 默认颜色
+              document
+                .querySelector('.color-option[data-class="course-computer"]')
+                .classList.add("selected");
+              document.getElementById("course-color").value = "course-computer";
+            }
+
+            // 更新模态框标题
+            document.querySelector(
+              "#add-course-modal h2"
+            ).textContent = `编辑课程 - ${course.title || "未命名课程"}`;
+
+            // 显示模态框
+            document.getElementById("add-course-modal").style.display = "flex";
+
+            // 保存当前编辑的课程ID
+            document.getElementById("add-course-form").dataset.editingCourseId =
+              course.id;
+          } catch (error) {
+            console.error("编辑课程时出错:", error);
+            showNotification("编辑课程失败: " + error.message, "error");
+          }
+        }
+
+        // 修改表单提交处理逻辑，确保数据正确更新
+        addCourseForm.addEventListener("submit", function (e) {
+          e.preventDefault();
+
+          // 获取表单数据
+          const courseData = {
+            title: document.getElementById("course-name").value.trim(),
+            teacher: document.getElementById("course-teacher").value.trim(),
+            location: document.getElementById("course-location").value.trim(),
+            color: document.getElementById("course-color").value,
+            day: parseInt(document.getElementById("course-day").value),
+            startTime: parseInt(document.getElementById("course-time").value),
+            endTime: parseInt(document.getElementById("course-time").value), // 默认单节课
+            weeks: document.getElementById("course-weeks").value.trim(),
+            notes: document.getElementById("course-notes").value.trim(),
+          };
+
+          // 验证必填字段
+          if (
+            !courseData.title ||
+            isNaN(courseData.day) ||
+            isNaN(courseData.startTime)
+          ) {
+            showNotification("请填写课程名称、星期和时间", "error");
+            return;
+          }
+
+          // 检查是编辑还是新建
+          const editingCourseId = addCourseForm.dataset.editingCourseId;
+
+          if (editingCourseId) {
+            // 更新现有课程
+            const success = updateCourse(parseInt(editingCourseId), courseData);
+            if (success) {
+              showNotification(`课程"${courseData.title}"更新成功`, "success");
+              // 这里可以添加数据持久化逻辑
+              // saveScheduleData();
+            } else {
+              showNotification("更新课程失败: 找不到对应课程", "error");
+            }
+          } else {
+            // 添加新课程
+            try {
+              const newCourse = addCourse(courseData);
+              showNotification(`课程"${newCourse.title}"添加成功`, "success");
+              // 这里可以添加数据持久化逻辑
+              // saveScheduleData();
+            } catch (error) {
+              showNotification("添加课程失败: " + error.message, "error");
+              return;
+            }
+          }
+
+          // 关闭模态框
+          document.getElementById("add-course-modal").style.display = "none";
+          delete addCourseForm.dataset.editingCourseId;
+
+          // 重新渲染课表
+          renderTimetable();
+          renderListView();
+        });
+
+        // 修改取消按钮逻辑，清除编辑状态
+        cancelCourse.addEventListener("click", function () {
+          document.getElementById("add-course-modal").style.display = "none";
+          delete addCourseForm.dataset.editingCourseId;
+        });
+
+        // 修改关闭按钮逻辑，清除编辑状态
+        closeCourseModal.addEventListener("click", function () {
+          document.getElementById("add-course-modal").style.display = "none";
+          delete addCourseForm.dataset.editingCourseId;
+        });
+
+        // 新增：创建新课程函数
+        function createNewCourse(day, time) {
+          // 获取对应的星期和时间段文本
+          const dayText =
+            scheduleData.days.find((d) => d.id === day)?.name || `星期${day}`;
+          const timePeriod = scheduleData.timePeriods.find(
+            (t) => t.id === time
+          );
+          const timeText = timePeriod ? timePeriod.time : `第${time}节`;
+
+          // 填充模态框中的预置值
+          document.getElementById("course-day").value = day;
+          document.getElementById("course-time").value = time;
+
+          // 更新模态框标题
+          document.querySelector(
+            "#add-course-modal h2"
+          ).textContent = `新建课程 - ${dayText} ${timeText}`;
+
+          // 重置表单其他字段
+          document.getElementById("course-name").value = "";
+          document.getElementById("course-teacher").value = "";
+          document.getElementById("course-location").value = "";
+          document.getElementById("course-weeks").value = "";
+          document.getElementById("course-notes").value = "";
+
+          // 设置默认颜色
+          document
+            .querySelector(".color-option.selected")
+            ?.classList.remove("selected");
+          document
+            .querySelector('.color-option[data-class="course-computer"]')
+            ?.classList.add("selected");
+          document.getElementById("course-color").value = "course-computer";
+
+          // 显示模态框
+          document.getElementById("add-course-modal").style.display = "flex";
+        }
+
+        // 修改颜色选择逻辑
+        colorOptions.forEach((option) => {
+          option.addEventListener("click", function () {
+            colorOptions.forEach((opt) => opt.classList.remove("selected"));
+            this.classList.add("selected");
+            document.getElementById("course-color").value =
+              this.getAttribute("data-class");
+          });
         });
 
         // 加载课表数据
